--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,32 +1,44 @@
 @import "../base/base.css";
 @import "../base/layout.css";
 
+
+
 .img {
-    width: 60%;
+    width: 200px;
+    height: 200px;
+}
+
+
+.row > img {
+    width: 50px;
     display: flex;
     flex-direction: row;
 }
 
 .main {
     display: flex;
-    gap: 100px;
-    justify-content: space-around;
+    gap: 60px;
 }
 
 .column {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     text-align: center;
     align-items: center;
 }
 
 .title {
-    justify-content: flex-start;
+    margin-top: 20px;
     text-transform: uppercase;
     color: var(--title-color);
 }
 
 .description {
+    margin-top: 20px;
     color: var(--description-color);
+}
+
+.text-align {
+    display: flex;
+    justify-content: center;
 }
