--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -3,42 +3,30 @@
 
 
 
-.img {
+
+.content {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    
+}
+
+.img > img {
+    display: flex;
     width: 200px;
     height: 200px;
 }
 
-
-.row > img {
-    width: 50px;
-    display: flex;
-    flex-direction: row;
-}
-
-.main {
-    display: flex;
-    gap: 60px;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-}
-
-.title {
-    margin-top: 20px;
-    text-transform: uppercase;
+.content .title {
+    margin-bottom: 10px;
+    font-size: 18px;
     color: var(--title-color);
+    text-align: center;
+    text-transform: uppercase;
 }
 
-.description {
-    margin-top: 20px;
-    color: var(--description-color);
-}
-
-.text-align {
-    display: flex;
-    justify-content: center;
+.content .text {
+    margin-top: 10px;
+    font-size: 14px;
+    color: var(--text-color);
 }
